gen1/LuaParser.py
# Generated from /home/fred/PycharmProjects/LuaPatcher/luaparser/parser/Lua.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LuaParser ( Parser ):

    grammarFileName = "Lua.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'and'", "'break'", "'do'", "'else'", 
                     "'elseif'", "'end'", "'false'", "'for'", "'function'", 
                     "'goto'", "'if'", "'in'", "'local'", "'nil'", "'not'", 
                     "'or'", "'repeat'", "'return'", "'then'", "'true'", 
                     "'until'", "'while'", "'+'", "'-'", "'*'", "'/'", "'//'", 
                     "'%'", "'^'", "'#'", "'=='", "'~='", "'<='", "'>='", 
                     "'<'", "'>'", "'='", "'&'", "'|'", "'~'", "'>>'", "'<<'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "'::'", "':'", 
                     "','", "'...'", "'..'", "'.'", "';'", "'!'", "'?'" ]

    symbolicNames = [ "<INVALID>", "AND", "BREAK", "DO", "ELSE", "ELSEIF", 
                      "END", "FALSE", "FOR", "FUNCTION", "GOTO", "IF", "IN", 
                      "LOCAL", "NIL", "NOT", "OR", "REPEAT", "RETURN", "THEN", 
                      "TRUE", "UNTIL", "WHILE", "ADD", "MINUS", "MULT", 
                      "DIV", "FLOOR", "MOD", "POW", "LENGTH", "EQ", "NEQ", 
                      "LTEQ", "GTEQ", "LT", "GT", "ASSIGN", "BITAND", "BITOR", 
                      "BITNOT", "BITRSHIFT", "BITRLEFT", "OPAR", "CPAR", 
                      "OBRACE", "CBRACE", "OBRACK", "CBRACK", "COLCOL", 
                      "COL", "COMMA", "VARARGS", "CONCAT", "DOT", "SEMCOL", 
                      "REQFIELD", "OPTIONALFIELD", "NAME", "NUMBER", "STRING", 
                      "COMMENT", "LINE_COMMENT", "SPACE", "NEWLINE", "SHEBANG", 
                      "LongBracket" ]

    RULE_chunk = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_do_block = 3
    RULE_while_stat = 4
    RULE_repeat_stat = 5
    RULE_assignment = 6
    RULE_local = 7
    RULE_goto_stat = 8
    RULE_if_stat = 9
    RULE_elseif_stat = 10
    RULE_else_stat = 11
    RULE_for_stat = 12
    RULE_function = 13
    RULE_names = 14
    RULE_function_literal = 15
    RULE_func_body = 16
    RULE_param_list = 17
    RULE_ret_stat = 18
    RULE_expr = 19
    RULE_or_expr = 20
    RULE_and_expr = 21
    RULE_rel_expr = 22
    RULE_concat_expr = 23
    RULE_add_expr = 24
    RULE_mult_expr = 25
    RULE_bitwise_expr = 26
    RULE_unary_expr = 27
    RULE_pow_expr = 28
    RULE_atom = 29
    RULE_var = 30
    RULE_callee = 31
    RULE_tail = 32
    RULE_table_constructor = 33
    RULE_field_list = 34
    RULE_field = 35
    RULE_field_sep = 36
    RULE_label = 37
    RULE_var_list = 38
    RULE_expr_list = 39
    RULE_name_list = 40

    ruleNames =  [ "chunk", "block", "stat", "do_block", "while_stat", "repeat_stat", 
                   "assignment", "local", "goto_stat", "if_stat", "elseif_stat", 
                   "else_stat", "for_stat", "function", "names", "function_literal", 
                   "func_body", "param_list", "ret_stat", "expr", "or_expr", 
                   "and_expr", "rel_expr", "concat_expr", "add_expr", "mult_expr", 
                   "bitwise_expr", "unary_expr", "pow_expr", "atom", "var", 
                   "callee", "tail", "table_constructor", "field_list", 
                   "field", "field_sep", "label", "var_list", "expr_list", 
                   "name_list" ]

    EOF = Token.EOF
    AND=1
    BREAK=2
    DO=3
    ELSE=4
    ELSEIF=5
    END=6
    FALSE=7
    FOR=8
    FUNCTION=9
    GOTO=10
    IF=11
    IN=12
    LOCAL=13
    NIL=14
    NOT=15
    OR=16
    REPEAT=17
    RETURN=18
    THEN=19
    TRUE=20
    UNTIL=21
    WHILE=22
    ADD=23
    MINUS=24
    MULT=25
    DIV=26
    FLOOR=27
    MOD=28
    POW=29
    LENGTH=30
    EQ=31
    NEQ=32
    LTEQ=33
    GTEQ=34
    LT=35
    GT=36
    ASSIGN=37
    BITAND=38
    BITOR=39
    BITNOT=40
    BITRSHIFT=41
    BITRLEFT=42
    OPAR=43
    CPAR=44
    OBRACE=45
    CBRACE=46
    OBRACK=47
    CBRACK=48
    COLCOL=49
    COL=50
    COMMA=51
    VARARGS=52
    CONCAT=53
    DOT=54
    SEMCOL=55
    REQFIELD=56
    OPTIONALFIELD=57
    NAME=58
    NUMBER=59
    STRING=60
    COMMENT=61
    LINE_COMMENT=62
    SPACE=63
    NEWLINE=64
    SHEBANG=65
    LongBracket=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ChunkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def EOF(self):
            return self.getToken(LuaParser.EOF, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_chunk

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChunk" ):
                listener.enterChunk(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChunk" ):
                listener.exitChunk(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChunk" ):
                return visitor.visitChunk(self)
            else:
                return visitor.visitChildren(self)




    def chunk(self):

        localctx = LuaParser.ChunkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_chunk)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.block()
            self.state = 83
            self.match(LuaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.StatContext)
            else:
                return self.getTypedRuleContext(LuaParser.StatContext,i)


        def ret_stat(self):
            return self.getTypedRuleContext(LuaParser.Ret_statContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LuaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 324830919221456652) != 0):
                self.state = 85
                self.stat()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 91
                self.ret_stat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(LuaParser.AssignmentContext,0)


        def var(self):
            return self.getTypedRuleContext(LuaParser.VarContext,0)


        def do_block(self):
            return self.getTypedRuleContext(LuaParser.Do_blockContext,0)


        def while_stat(self):
            return self.getTypedRuleContext(LuaParser.While_statContext,0)


        def repeat_stat(self):
            return self.getTypedRuleContext(LuaParser.Repeat_statContext,0)


        def local(self):
            return self.getTypedRuleContext(LuaParser.LocalContext,0)


        def goto_stat(self):
            return self.getTypedRuleContext(LuaParser.Goto_statContext,0)


        def if_stat(self):
            return self.getTypedRuleContext(LuaParser.If_statContext,0)


        def for_stat(self):
            return self.getTypedRuleContext(LuaParser.For_statContext,0)


        def function(self):
            return self.getTypedRuleContext(LuaParser.FunctionContext,0)


        def label(self):
            return self.getTypedRuleContext(LuaParser.LabelContext,0)


        def BREAK(self):
            return self.getToken(LuaParser.BREAK, 0)

        def SEMCOL(self):
            return self.getToken(LuaParser.SEMCOL, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = LuaParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.var(False)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.do_block()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 97
                self.while_stat()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 98
                self.repeat_stat()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 99
                self.local()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 100
                self.goto_stat()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 101
                self.if_stat()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 102
                self.for_stat()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 103
                self.function()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 104
                self.label()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 105
                self.match(LuaParser.BREAK)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 106
                self.match(LuaParser.SEMCOL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Do_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(LuaParser.DO, 0)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def END(self):
            return self.getToken(LuaParser.END, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_do_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDo_block" ):
                listener.enterDo_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDo_block" ):
                listener.exitDo_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDo_block" ):
                return visitor.visitDo_block(self)
            else:
                return visitor.visitChildren(self)




    def do_block(self):

        localctx = LuaParser.Do_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_do_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(LuaParser.DO)
            self.state = 110
            self.block()
            self.state = 111
            self.match(LuaParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(LuaParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(LuaParser.ExprContext,0)


        def do_block(self):
            return self.getTypedRuleContext(LuaParser.Do_blockContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_while_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stat" ):
                listener.enterWhile_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stat" ):
                listener.exitWhile_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stat" ):
                return visitor.visitWhile_stat(self)
            else:
                return visitor.visitChildren(self)




    def while_stat(self):

        localctx = LuaParser.While_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_while_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(LuaParser.WHILE)
            self.state = 114
            self.expr()
            self.state = 115
            self.do_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Repeat_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPEAT(self):
            return self.getToken(LuaParser.REPEAT, 0)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def UNTIL(self):
            return self.getToken(LuaParser.UNTIL, 0)

        def expr(self):
            return self.getTypedRuleContext(LuaParser.ExprContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_repeat_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeat_stat" ):
                listener.enterRepeat_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeat_stat" ):
                listener.exitRepeat_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeat_stat" ):
                return visitor.visitRepeat_stat(self)
            else:
                return visitor.visitChildren(self)




    def repeat_stat(self):

        localctx = LuaParser.Repeat_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_repeat_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(LuaParser.REPEAT)
            self.state = 118
            self.block()
            self.state = 119
            self.match(LuaParser.UNTIL)
            self.state = 120
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_list(self):
            return self.getTypedRuleContext(LuaParser.Var_listContext,0)


        def ASSIGN(self):
            return self.getToken(LuaParser.ASSIGN, 0)

        def expr_list(self):
            return self.getTypedRuleContext(LuaParser.Expr_listContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = LuaParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.var_list()
            self.state = 123
            self.match(LuaParser.ASSIGN)
            self.state = 124
            self.expr_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOCAL(self):
            return self.getToken(LuaParser.LOCAL, 0)

        def name_list(self):
            return self.getTypedRuleContext(LuaParser.Name_listContext,0)


        def FUNCTION(self):
            return self.getToken(LuaParser.FUNCTION, 0)

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def func_body(self):
            return self.getTypedRuleContext(LuaParser.Func_bodyContext,0)


        def ASSIGN(self):
            return self.getToken(LuaParser.ASSIGN, 0)

        def expr_list(self):
            return self.getTypedRuleContext(LuaParser.Expr_listContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_local

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocal" ):
                listener.enterLocal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocal" ):
                listener.exitLocal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocal" ):
                return visitor.visitLocal(self)
            else:
                return visitor.visitChildren(self)




    def local(self):

        localctx = LuaParser.LocalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_local)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(LuaParser.LOCAL)
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [58]:
                self.state = 127
                self.name_list()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==37:
                    self.state = 128
                    self.match(LuaParser.ASSIGN)
                    self.state = 129
                    self.expr_list()


                pass
            elif token in [9]:
                self.state = 132
                self.match(LuaParser.FUNCTION)
                self.state = 133
                self.match(LuaParser.NAME)
                self.state = 134
                self.func_body()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Goto_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GOTO(self):
            return self.getToken(LuaParser.GOTO, 0)

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_goto_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGoto_stat" ):
                listener.enterGoto_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGoto_stat" ):
                listener.exitGoto_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGoto_stat" ):
                return visitor.visitGoto_stat(self)
            else:
                return visitor.visitChildren(self)




    def goto_stat(self):

        localctx = LuaParser.Goto_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_goto_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(LuaParser.GOTO)
            self.state = 138
            self.match(LuaParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(LuaParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(LuaParser.ExprContext,0)


        def THEN(self):
            return self.getToken(LuaParser.THEN, 0)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def END(self):
            return self.getToken(LuaParser.END, 0)

        def elseif_stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.Elseif_statContext)
            else:
                return self.getTypedRuleContext(LuaParser.Elseif_statContext,i)


        def else_stat(self):
            return self.getTypedRuleContext(LuaParser.Else_statContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_if_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stat" ):
                listener.enterIf_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stat" ):
                listener.exitIf_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stat" ):
                return visitor.visitIf_stat(self)
            else:
                return visitor.visitChildren(self)




    def if_stat(self):

        localctx = LuaParser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_if_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(LuaParser.IF)
            self.state = 141
            self.expr()
            self.state = 142
            self.match(LuaParser.THEN)
            self.state = 143
            self.block()
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 144
                self.elseif_stat()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 150
                self.else_stat()

